--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <div class="form-group">
                 <label for="peso">Peso (em kg):</label>
-                <input type="range" id="peso" name="peso" min="0" max="200">
+                <input type="number" id="peso" name="peso" min="0">
             </div>
 
             <label for="sexo"> Sexo: </label>
